objects/agf__Locking_Record__c.object
<CustomObject>
    <fields>
        <fullName>agf__Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>agf__End_Time__c</fullName>
        <label>Resolved Lock Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Locked_Duration__c</fullName>
        <description>Locked duration (in Hours) is the difference between now and the record&apos;s start lock time if the record has not been resolved; otherwise, Locked duration is the difference between when the record was resolved and record&apos;s start lock time.</description>
        <formula>IF(ISNULL(agf__End_Time__c), (NOW() - agf__Start_Time__c), (agf__End_Time__c - agf__Start_Time__c)) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Locked duration (in Hours) is the difference between now and the record&apos;s start lock time if the record has not been resolved; otherwise, Locked duration is the difference between when the record was resolved and record&apos;s start lock time.</inlineHelpText>
        <label>Locked Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Reason__c</fullName>
        <label>Reason</label>
        <picklist>
            <picklistValues>
                <fullName>Basic exceed age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full exceed age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic exceed limit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Basic&amp;Full exceed limit</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>agf__Response_Duration__c</fullName>
        <description>Response duration (in Hours) is the difference between when the record was resolved and when the record was created if the record has been resolved; otherwise, Response duration is removed.</description>
        <formula>IF(ISNULL(agf__End_Time__c), null, (agf__End_Time__c - CreatedDate)) * 24</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Response duration (in Hours) is the difference between when the record was resolved and when the record was created if the record has been resolved; otherwise, Response duration is removed.</inlineHelpText>
        <label>Response Duration</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>agf__Start_Time__c</fullName>
        <label>Start Lock Time</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>agf__Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>ToBe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Locked</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unlock Override</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>agf__Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Team</label>
        <referenceTo>agf__ADM_Scrum_Team__c</referenceTo>
        <relationshipLabel>Locking Records</relationshipLabel>
        <relationshipName>Locking_Records</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Locking Record</label>
    <listViews>
        <fullName>agf__All</fullName>
        <columns>NAME</columns>
        <columns>agf__Team__c</columns>
        <columns>agf__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>L-{0000}</displayFormat>
        <label>Locking Record Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locking Records</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>agf__StartTimeLimit</fullName>
        <active>true</active>
        <description>Start time cannot be set to more than a week into the future.</description>
        <errorConditionFormula>agf__Start_Time__c  &gt; NOW() + 7</errorConditionFormula>
        <errorDisplayField>agf__Start_Time__c</errorDisplayField>
        <errorMessage>Lock start time set for more than 7 days in the future.</errorMessage>
    </validationRules>
</CustomObject>